<resources>
    <string name="app_name">Talentium</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="welcome_word">You have a talent, you are in the right place.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="Register">Create an account</string>
    <string name="forgetpassword">Forget your password?</string>
    <string name="orconnectwith">Or connext with</string>

    <string name="email_hint">user@email.com</string>
    <string name="username_hint">Your username</string>
    <string name="firstname_hint">Password</string>
    <string name="confirmPassword_hint">Confirm Password</string>
    <string name="lastname_hint">Your last name</string>
    <string name="gotologin">Go to login</string>
    <string name="required">Required</string>
    <string name="waiting">Please, wait!</string>
    <string name="feed">Feed</string>
    <string name="profile">Profile</string>
    <string name="live">Live</string>
    <string name="settings">Settings and privacy</string>

    <string name="account">Account</string>

    <string name="editaccount">Manage account</string>
    <string name="securitylogin">Security and login</string>
    <string name="shareprofile">Share profile</string>

    <string name="content">Content</string>
    <string name="translate">Language</string>
    <string name="notif">Notifications</string>
    <string name="updatephoto">Update picture</string>
    <string name="updatephotodesc">Here you can change your profile picture</string>
    <string name="updatename">Update your information</string>
    <string name="updateusername">Update your username</string>
    <string name="submit">Submit</string>
    <string name="changepassword">Change your password</string>
    <string name="changeprivacy">Change your privacy status</string>
    <string name="oldpassword">Your old password</string>
    <string name="newpassword">Your new password</string>
    <string name="confirmpassword">Confirm new password</string>
    <string name="privacystatus">Make your profile private</string>
    <string name="DicoverFriendsTitle">Dicover friends</string>
    <string name="SearchFriendsHint">Discover new friends</string>
    <string name="NoResultFound">No result found</string>

    <string name="password_hint">*******</string>
    <string name="policy">© 2021,esprit inc,Talentium</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="facebook_app_id">4308791225898702</string>
    <string name="fb_login_protocol_scheme">fb4308791225898702</string>
    <!-- EditorVdieo -->
    <string name="video_editing">MarvelEditor</string>
    <string name="save">Save</string>
    <string name="processing_video">Processing Video</string>
    <string name="video_1">Video 1</string>
    <string name="video_2">Video 2</string>
    <string name="select_music">Select music</string>
    <string name="label">Label</string>

    <string name="error_filter">Select the video which you want to add filter animation</string>
    <string name="error_crop">Select the video which you want to add crop</string>
    <string name="error_music">Select the video which you want to merge the audio</string>
    <string name="error_speed">Select the video which you want to add speed animation</string>
    <string name="error_text">Select the video which you want to add text inside video</string>
    <string name="error_sticker">Select the video which you want to add sticker inside video</string>
    <string name="error_merge">Select 2 videos which you want to merge</string>
    <string name="error_transition">Select the video which you want to perform transition</string>

    <string name="error_select_sticker">Select the sticker which you want to show inside the video</string>
    <string name="error_select_sticker_pos">Select the position where you want to show the sticker</string>
    <string name="error_add_text">Add the text which you want to show inside the video</string>
    <string name="error_add_text_pos">Select the position where you want to show the text</string>
    <string name="error_select_speed">Select the playback speed which you want to apply to the video</string>
    <string name="error_select_filter">Select the filter which you want to apply to the video</string>
    <string name="error_select_smaller_video">Select the video smaller than 4 minutes</string>
    <string name="play_time">Play Time</string>
    <string name="enter_text_here">Enter text here</string>

    <string name="save_video">Would you like to save your edited video?</string>
    <string name="Continue">Continue</string>
    <string name="successfully_saved">Your video was successfully saved</string>

    <string name="not_supported_video">Video format is not supported. Would you like to convert avi to mp4 format?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="short_seconds">sec</string>
    <string name="megabyte">MB</string>
    <string name="kilobyte">KB</string>
    <string name="trimming_progress">Trimming your video...</string>
    <string name="cancel">Cancel</string>
    <string name="select_a_video">Select a video</string>
    <string name="select_action">Select Action</string>
    <string name="select_video_from_gallery">Select video from gallery</string>
    <string name="record_video_from_camera">Record video from camera</string>
</resources>