<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/Mint_Cream"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <FrameLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        android:id="@+id/backButtonWraper"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/ic_arrow_back" />

    </FrameLayout>
    <TextView
        android:id="@+id/titleSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/settings"
        android:textSize="@dimen/_16sdp"
        android:textColor="@color/Black_Coffe"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleSettings">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/Roman_Silver"
            android:text="@string/account"
            android:layout_marginLeft="@dimen/_10sdp"
            android:textSize="@dimen/_14sdp" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:id="@+id/ManageAccount"
            android:paddingLeft="@dimen/_20sdp"
            android:background="@drawable/riple"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center|start"
            android:layout_height="@dimen/_40sdp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_baseline_person_24"
                />
            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:textColor="@color/Black_Coffe"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/_2sdp"
            android:text="@string/editaccount"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintTop_toBottomOf="parent" />
    </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/gotoSecurityandLogin"
            android:layout_width="match_parent"
            android:background="@drawable/riple"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center|start"
            android:paddingLeft="@dimen/_20sdp"
            android:layout_height="@dimen/_40sdp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_baseline_lock_24"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:textColor="@color/Black_Coffe"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/_2sdp"
                android:text="@string/securitylogin"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintTop_toBottomOf="parent" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:paddingLeft="@dimen/_20sdp"
            android:background="@drawable/riple"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center|start"
            android:layout_height="@dimen/_40sdp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_baseline_share_24" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:textColor="@color/Black_Coffe"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/_2sdp"
                android:text="@string/shareprofile"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintTop_toBottomOf="parent" />
        </LinearLayout>

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/Roman_Silver" />
        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:textColor="@color/Roman_Silver"
            android:text="@string/content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:textSize="@dimen/_14sdp" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:paddingLeft="@dimen/_20sdp"
            android:background="@drawable/riple"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center|start"
            android:layout_height="@dimen/_40sdp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_baseline_translate_24" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:textColor="@color/Black_Coffe"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/_2sdp"
                android:text="@string/translate"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintTop_toBottomOf="parent" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:paddingLeft="@dimen/_20sdp"
            android:background="@drawable/riple"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center|start"
            android:layout_height="@dimen/_40sdp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_baseline_notifications_24" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:textColor="@color/Black_Coffe"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/_2sdp"
                android:text="@string/notif"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintTop_toBottomOf="parent" />
        </LinearLayout>
        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/Roman_Silver" />

    </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>