<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Mint_Cream"
    tools:context=".DiscoverActivity">
    <FrameLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        android:id="@+id/backButtonWraperDiscover"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/ic_arrow_back" />

    </FrameLayout>
    <TextView
        android:id="@+id/DicoverTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/DicoverFriendsTitle"
        android:textSize="@dimen/_16sdp"
        android:textColor="@color/Black_Coffe"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

     <SearchView
        android:id="@+id/simpleSearchView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:iconifiedByDefault="false"
        android:queryHint="@string/SearchFriendsHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DicoverTitle" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@+id/simpleSearchView">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/usersRecyclerView"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:itemCount="4"
            tools:listitem="@layout/user_in_search" />

    </ScrollView>

    <TextView
        android:id="@+id/noresulttext"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/NoResultFound"
        android:textSize="@dimen/_18sdp"
        android:textColor="@color/Roman_Silver"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/scrollView2" />
</androidx.constraintlayout.widget.ConstraintLayout>