<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Mint_Cream"

    tools:context=".Settings.SecurityActivity">
    <FrameLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        android:id="@+id/backButtonWraperofSecurity"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/gobackarrow"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/ic_arrow_back" />

    </FrameLayout>
    <TextView
        android:id="@+id/titleSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/securitylogin"
        android:textSize="@dimen/_16sdp"
        android:textColor="@color/Black_Coffe"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <FrameLayout
        android:id="@+id/manageWrapper"
        android:background="@drawable/riple"
        android:clickable="true"
        android:focusable="true"
        android:padding="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"


            android:src="@drawable/ic_baseline_lock_24"
            />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleSettings">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/riple"
        android:clickable="true"
        android:focusable="true"
        android:id="@+id/updatepasswordmenu"
        android:gravity="center|start"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/_20sdp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_baseline_lock_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_2sdp"
            android:text="@string/changepassword"
            android:textColor="@color/Black_Coffe"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintTop_toBottomOf="parent" />
        <RelativeLayout
            android:id="@+id/rllRight"
            android:layout_width="match_parent"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_height="wrap_content"
            android:gravity="right">

            <ImageView
                android:id="@+id/updatepasswordarrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_arrow_forward_ios_24" /></RelativeLayout>
    </LinearLayout>
        <LinearLayout

            android:visibility="gone"
            android:id="@+id/updatepasswordlayout"
            android:layout_width="match_parent"
            android:background="@color/white"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            >

            <EditText
                android:layout_width="@dimen/_250sdp"
                android:textColorHint="@color/Roman_Silver"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:ems="10"
                android:id="@+id/oldpasswordEditText"
                android:textColor="@color/Black_Coffe"
                android:paddingLeft="@dimen/_12sdp"
                android:shadowColor="@color/Mint_Cream"
                android:hint="@string/oldpassword"
                android:shadowDx="@integer/material_motion_duration_long_1"
                android:shadowDy="@integer/material_motion_duration_long_1"
                android:layout_marginTop="@dimen/_10sdp"
                android:inputType="textPassword"
                android:background="@drawable/btndesign"
                />

            <EditText
                android:layout_width="@dimen/_250sdp"
                android:textColorHint="@color/Roman_Silver"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:ems="10"
                android:id="@+id/newpasswordEditText"
                android:textColor="@color/Black_Coffe"
                android:paddingLeft="@dimen/_12sdp"
                android:shadowColor="@color/Mint_Cream"
                android:hint="@string/newpassword"
                android:shadowDx="@integer/material_motion_duration_long_1"
                android:shadowDy="@integer/material_motion_duration_long_1"
                android:layout_marginTop="@dimen/_10sdp"
                android:inputType="textPassword"
                android:background="@drawable/btndesign"/>

            <EditText
                android:layout_width="@dimen/_250sdp"
                android:textColorHint="@color/Roman_Silver"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:ems="10"
                android:id="@+id/confirmnewpasswordEditText"
                android:textColor="@color/Black_Coffe"
                android:paddingLeft="@dimen/_12sdp"
                android:shadowColor="@color/Mint_Cream"
                android:hint="@string/confirmpassword"
                android:shadowDx="@integer/material_motion_duration_long_1"
                android:shadowDy="@integer/material_motion_duration_long_1"
                android:layout_marginTop="@dimen/_10sdp"
                android:inputType="textPassword"
                android:background="@drawable/btndesign"/>
            <androidx.appcompat.widget.AppCompatButton
                android:layout_margin="@dimen/_10sdp"
                android:layout_width="wrap_content"
                android:text="@string/submit"
                android:background="@drawable/btndesign"
                android:id="@+id/updatepasswordBtn"
                android:textColor="@color/Roman_Silver"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/riple"
            android:clickable="true"
            android:focusable="true"
            android:id="@+id/updateprivacyemenu"
            android:gravity="center|start"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/_20sdp"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_baseline_privacy_tip_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_2sdp"
                android:text="@string/changeprivacy"
                android:textColor="@color/Black_Coffe"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintTop_toBottomOf="parent" />
            <RelativeLayout
                android:id="@+id/rlllRight"
                android:layout_width="match_parent"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_height="wrap_content"
                android:gravity="right">

                <ImageView
                    android:id="@+id/updateprivacyarrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_arrow_forward_ios_24" /></RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:visibility="gone"
            android:id="@+id/updateprivacylayout"
            android:layout_width="match_parent"
            android:background="@color/white"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            >
            <com.google.android.material.switchmaterial.SwitchMaterial
                android:layout_width="match_parent"
                android:textColor="@color/Black_Coffe"
                android:layout_margin="@dimen/_20sdp"
                android:layout_height="match_parent"
                android:text="@string/privacystatus"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>